# plugin

./: .gitignore  CMakeLists.txt  README.md
projects/: Myo_vs2013.sln  OculusRiftCV1_vs2015.sln  OculusRiftDK1_vs2010.sln  OculusRiftDK2_vs2010.sln  OpenVR_vs2015.sln  OptiTrack_vs2010.sln  PerceptionNeuron_vs2013.sln
projects/KinectV2_vs2013/: KinectV2_vs2013.vcxproj  KinectV2_vs2013.vcxproj.filters
projects/Myo_vs2013/: Myo.ini  Myo_vs2013.vcxproj  Myo_vs2013.vcxproj.filters
projects/OculusRiftCV1_vs2015/: OculusRiftCV1.ini  OculusRiftCV1_vs2015.vcxproj
projects/OculusRiftDK1_vs2010/: OculusRiftDK1.ini  OculusRiftDK1_vs2010.vcxproj  OculusRiftDK1_vs2010.vcxproj.filters  README.md
projects/OculusRiftDK2_vs2010/: OculusRiftDK2_vs2010.vcxproj  OculusRiftDK2_vs2010.vcxproj.filters
projects/OpenVR_vs2015/: OpenVR.ini  OpenVR_vs2015.vcxproj
projects/OptiTrack_vs2010/: OptiTrack_vs2010.vcxproj  OptiTrack_vs2010.vcxproj.filters  README.md
projects/PerceptionNeuron_vs2013/: PerceptionNeuron.ini  PerceptionNeuron_vs2013.vcxproj  PerceptionNeuron_vs2013.vcxproj.filters  README.md
sample_controllers/: README.md
sample_controllers/AvatarControllerByKinectV2/: AvatarControllerByKinectV2.cpp  AvatarControllerByKinectV2.h  Makefile  world.xml
sample_controllers/AvatarControllerByOculusCV1/: AvatarControllerByOculusCV1.cpp  AvatarControllerByOculusCV1.h  Makefile  world.xml
sample_controllers/AvatarControllerByOculusDK1/: AvatarControllerByOculusDK1.cpp  AvatarControllerByOculusDK1.h  Makefile  world.xml
sample_controllers/AvatarControllerByOculusDK2/: AvatarControllerByOculusDK2.cpp  AvatarControllerByOculusDK2.h  Makefile  world.xml
sample_controllers/AvatarControllerByOpenVR/: AvatarControllerByOpenVR.cpp  AvatarControllerByOpenVR.h  Makefile  world.xml
sample_controllers/AvatarControllerByOptiTrack/: AvatarControllerByOptiTrack.cpp  AvatarControllerByOptiTrack.h  Makefile  README.md  world.xml
sample_controllers/AvatarControllerByPerceptionNeuron/: AvatarControllerByPerceptionNeuron.cpp  AvatarControllerByPerceptionNeuron.h  Makefile  PerceptionNeuron.ini  world.xml
sample_controllers/AvatarControllerByPerceptionNeuronAndOculusRiftCV1/: makefile  (+4 more)
sigverse/: README.md
(+228 files in other folders)
